crates/mineral-tui/src/snapshots/search_leave_morph_midframe_snapshot.snap
---
source: crates/mineral-tui/src/view.rs
description: "Search 退场形变中途:results/detail 随框缩回 browse 位(非起点瞬切 playlists)"
expression: t.backend()
---
"                                                    ‖ paused                    "
"                    ╭search───────────────────────────────╮                     "
"╭results─────────────────────────────────╮╭♪ song · LoveLetterTypewriter───────╮"
"│  title               artist       len  ││▀▀▀▀▀▀▀▀▀▀  LoveLetterTypewriter    │"
"│▌ LoveLetterTypewrite Mineral      3:45 ││▀▀▀▀▀▀▀▀▀▀  Mineral                 │"
"│  Palisade            Mineral      4:31 ││▀▀▀▀▀▀▀▀▀▀                          │"
"│  Gjs                 Mineral      4:46 ││▀▀▀▀▀▀▀▀▀▀                          │"
"│  Unfinished          Mineral      6:07 ││▀▀▀▀▀▀▀▀▀▀                          │"
"│                                        ││                                    │"
"│                                        ││             ─────────              │"
"│                                        ││  ⠋ loading                         │"
"│                                        ││                                    │"
"│                                        ││                                    │"
"│                                        ││                                    │"
"│                                        ││                                    │"
"╰ 1 / 4 ─────────────────────────────────╯╰───────╭ spectrum ────────╮─────────╯"
"                    ╭ transport ───────────────────────────────────────────────╮"
"          ╭ lyrics ─│────────╮                    —                            │"
"          │         │        │                    ·                            │"
"          │    ♪ no │ 0:00 ●───────────────────────────────────────────── -:-- │"
"          │         │        │          [⏮]   [▶]   [⏭]   [→]                  │"
"          ╰─────────│────────╯           p     ␣     n     m                   │"
"                    │ vol █████████ 100%      mode seq                   fmt — │"
"                    ╰──────────────────────────────────────────────────────────╯"
