crates/mineral-tui/src/snapshots/search_morph_midframe_snapshot.snap
---
source: crates/mineral-tui/src/view.rs
assertion_line: 1541
description: "Search 形变中途:results/detail 对飞、prompt 长出、lyrics/spectrum 收缩"
expression: t.backend()
---
"                    ╭search─────────────────────────────────╮                   "
"                    ╰───────────────────────────────────────╯                   "
"╭ playlists ─────────────────────────────╮╭ selected ──────────────────────────╮"
"│                                        ⢸│                                    │"
"│             还没有可用歌单             ⢸│                                    │" Hidden by multi-width symbols: [(15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " ")]
"│                                        ⢸│                                    │"
"│          登录一个音乐源,例如:          ⢸│                                    │" Hidden by multi-width symbols: [(12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (27, " "), (29, " ")]
"│       mineral channel netease login    ⢸│                                    │"
"│                                        ⢸│                                    │"
"│         登录后重启 mineral 生效        ⢸│                                    │" Hidden by multi-width symbols: [(11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (30, " "), (32, " ")]
"│                                        ⢸│                                    │"
"│                                        ⢸│                                    │"
"│                                        ⢸│                                    │"
"│                                        ⢸│                                    │"
"╰ 0 / 0 ─────────────────────────────────╯╰────────────────────────────────────╯"
"                                                                                "
"                    ╭ transport ───────────────────────────────────────────────╮"
"          ╭ lyrics ─│────────╮          LoveLetterTypewriter                   │"
"          │         │        │               Mineral ·                         │"
"          │    ♪ no │ 0:00 ●───────────────────────────────────────────── 3:45 │"
"          ╰─────────│────────╯          [⏮]   [▶]   [⏭]   [→]                  │"
"                    │                    p     ␣     n     m                   │"
"                    │ vol █████████ 100%      mode seq                   fmt — │"
"                    ╰──────────────────────────────────────────────────────────╯"
