crates/mineral-tui/src/snapshots/search_no_results_hint_snapshot.snap
---
source: crates/mineral-tui/src/view.rs
description: "Search 到货 0 条:results 列居中「no results」(bucket 在但空,区别于 idle)"
expression: t.backend()
---
"╭search────────────────────────────────────────────────────────────────────────╮"
"│ ♫ netease   ♪ songs  zzzz                                                    │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭results─────────────────────╮╭detail──────────────────────────────────────────╮"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│         no results         ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"╰────────────────────────────╯╰────────────────────────────────────────────────╯"
"╭ transport ───────────────────────────────────────────────────────────────────╮"
"│                                       —                                      │"
"│                                       ·                                      │"
"│ 0:00 ●───────────────────────────────────────────────────────────────── -:-- │"
"│                             [⏮]   [▶]   [⏭]   [→]                            │"
"│                              p     ␣     n     m                             │"
"│ vol ████████████ 100%             mode seq                             fmt — │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
