crates/mineral-tui/src/snapshots/search_results_albums_snapshot.snap
---
source: crates/mineral-tui/src/view.rs
description: "Search 专辑结果:专辑名 · 艺人 两列对齐"
expression: t.backend()
---
"╭search────────────────────────────────────────────────────────────────────────╮"
"│ ♫ netease   ◉ albums  mineral                                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭results─────────────────────╮╭◉ album · Power─────────────────────────────────╮"
"│  album       artist  tracks││ ▀▀▀▀▀▀▀▀▀▀▀▀  Power                            │"
"│▌ Power       Mineral -     ││ ▀▀▀▀▀▀▀▀▀▀▀▀  Mineral                          │"
"│  EndSerenadi Mineral -     ││ ▀▀▀▀▀▀▀▀▀▀▀▀                                   │"
"│                            ││ ▀▀▀▀▀▀▀▀▀▀▀▀                                   │"
"│                            ││ ▀▀▀▀▀▀▀▀▀▀▀▀                                   │"
"│                            ││ ▀▀▀▀▀▀▀▀▀▀▀▀                                   │"
"│                            ││                  ────────────                  │"
"│                            ││  ⠋ loading                                     │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"╰ 1 / 2 ─────────────────────╯╰────────────────────────────────────────────────╯"
"╭ transport ───────────────────────────────────────────────────────────────────╮"
"│                                       —                                      │"
"│                                       ·                                      │"
"│ 0:00 ●───────────────────────────────────────────────────────────────── -:-- │"
"│                             [⏮]   [▶]   [⏭]   [→]                            │"
"│                              p     ␣     n     m                             │"
"│ vol ████████████ 100%             mode seq                             fmt — │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
