crates/mineral-tui/src/snapshots/search_results_artists_snapshot.snap
---
source: crates/mineral-tui/src/view.rs
description: "Search artist 结果:artist 名 · 关注数缩写 两列对齐"
expression: t.backend()
---
"╭search────────────────────────────────────────────────────────────────────────╮"
"│ ♫ netease   ✦ artists  football                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭results─────────────────────╮╭✦ artist · Chinese Football─────────────────────╮"
"│  artist              fans  ││              Chinese Football                  │"
"│▌ Chinese Football    42k   ││              42,000 fans                       │"
"│  American Football   1M    ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                  ────────────                  │"
"│                            ││Top Songs  Albums   [ / ] section               │"
"│                            ││  ⠋ loading                                     │"
"│                            ││                                                │"
"│                            ││                                                │"
"╰ 1 / 2 ─────────────────────╯╰────────────────────────────────────────────────╯"
"╭ transport ───────────────────────────────────────────────────────────────────╮"
"│                                       —                                      │"
"│                                       ·                                      │"
"│ 0:00 ●───────────────────────────────────────────────────────────────── -:-- │"
"│                             [⏮]   [▶]   [⏭]   [→]                            │"
"│                              p     ␣     n     m                             │"
"│ vol ████████████ 100%             mode seq                             fmt — │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
