crates/mineral-tui/src/snapshots/search_results_playlists_snapshot.snap
---
source: crates/mineral-tui/src/view.rs
description: "Search 歌单结果:歌单名 · N tracks 两列对齐"
expression: t.backend()
---
"╭search────────────────────────────────────────────────────────────────────────╮"
"│ ♫ netease   ▤ playlists  indie                                               │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭results─────────────────────╮╭▤ playlist · Bedroom Pop────────────────────────╮"
"│  playlist            tracks││ ▀▀▀▀▀▀▀▀▀▀▀▀  Bedroom Pop                      │"
"│▌ Bedroom Pop         42    ││ ▀▀▀▀▀▀▀▀▀▀▀▀  42 tracks                        │"
"│  Math Rock 精选      128   ││ ▀▀▀▀▀▀▀▀▀▀▀▀                                   │" Hidden by multi-width symbols: [(14, " "), (16, " ")]
"│                            ││ ▀▀▀▀▀▀▀▀▀▀▀▀                                   │"
"│                            ││ ▀▀▀▀▀▀▀▀▀▀▀▀                                   │"
"│                            ││ ▀▀▀▀▀▀▀▀▀▀▀▀                                   │"
"│                            ││                  ────────────                  │"
"│                            ││  ⠋ loading                                     │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"╰ 1 / 2 ─────────────────────╯╰────────────────────────────────────────────────╯"
"╭ transport ───────────────────────────────────────────────────────────────────╮"
"│                                       —                                      │"
"│                                       ·                                      │"
"│ 0:00 ●───────────────────────────────────────────────────────────────── -:-- │"
"│                             [⏮]   [▶]   [⏭]   [→]                            │"
"│                              p     ␣     n     m                             │"
"│ vol ████████████ 100%             mode seq                             fmt — │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
