crates/mineral-tui/src/snapshots/search_results_steady_snapshot.snap
---
source: crates/mineral-tui/src/view.rs
description: "Search 结果稳态:prompt 源/类型徽章 + query + 光标,results 单曲行高亮"
expression: t.backend()
---
"╭search────────────────────────────────────────────────────────────────────────╮"
"│ ♫ netease   ♪ songs  serenading                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭results─────────────────────╮╭♪ song · LoveLetterTypewriter───────────────────╮"
"│  title       artist   len  ││ ▀▀▀▀▀▀▀▀▀▀▀▀  LoveLetterTypewriter             │"
"│▌ LoveLetterT Mineral  3:45 ││ ▀▀▀▀▀▀▀▀▀▀▀▀  Mineral                          │"
"│  Palisade    Mineral  4:31 ││ ▀▀▀▀▀▀▀▀▀▀▀▀                                   │"
"│  Gjs         Mineral  4:46 ││ ▀▀▀▀▀▀▀▀▀▀▀▀                                   │"
"│  Unfinished  Mineral  6:07 ││ ▀▀▀▀▀▀▀▀▀▀▀▀                                   │"
"│                            ││ ▀▀▀▀▀▀▀▀▀▀▀▀                                   │"
"│                            ││                  ────────────                  │"
"│                            ││  ⠋ loading                                     │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"╰ 1 / 4 ─────────────────────╯╰────────────────────────────────────────────────╯"
"╭ transport ───────────────────────────────────────────────────────────────────╮"
"│                                       —                                      │"
"│                                       ·                                      │"
"│ 0:00 ●───────────────────────────────────────────────────────────────── -:-- │"
"│                             [⏮]   [▶]   [⏭]   [→]                            │"
"│                              p     ␣     n     m                             │"
"│ vol ████████████ 100%             mode seq                             fmt — │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
